--- a/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
@@ -15,15 +15,32 @@
 						<h3>Cadastro da Ficha de Identificação</h3>
 					</div>
 					<hr />
-					<!-- MESSAGES -->
 					<form th:object="${ficha}"
 						th:action="@{/gtcc/fichaidentificacao/cadastrar}" method="POST"
-						autocomplete="off" class="form-default form-horizontal"
+						class="form-default form-horizontal"
 						name="form">
 
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<label>* Esses campos são obrigatórios</label>
+							</div>
+						</div>
+
+						<div class="alert  alert-danger  alert-dismissible" role="alert"
+							th:if="${#fields.hasAnyErrors()}">
+							<button type="button" class="close" data-dismiss="alert"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+
+							<div th:each="erro: ${#fields.detailedErrors()}">
+								<i class="fa fa-exclamation-circle"></i> <span
+									th:text="${erro.message}">Mensagem erro.</span>
+							</div>
+						</div>
 
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-5">
+							<div class="input-group col-xl-10">
 								<input type="text" name="tituloTrabalho" id="tituloTrabalho"
 									class="form-control" th:field="*{tituloTrabalho}"
 									autofocus="autofocus" placeholder="Título do Trabalho *"
@@ -32,7 +49,7 @@
 						</div>
 
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-5">
+							<div class="input-group col-xl-10">
 								<div style="color: red"
 									th:if="${#fields.hasErrors('tituloTrabalho')}"
 									th:errors="*{tituloTrabalho}"></div>
@@ -40,61 +57,102 @@
 						</div>
 
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-5">
+							<div class="input-group col-xl-8">
 								<input type="text" name="areaConcentracao" id="areaConcentracao"
 									class="form-control" th:field="*{areaConcentracao}"
 									placeholder="Area de concentração *"
 									aria-label="Area de concentração"
 									aria-describedby="basic-addon1">
 							</div>
+
+							<div class="input-group col-xl-2">
+								<input type="number" name="ano" id="ano" class="form-control"
+									th:field="*{ano}" placeholder="Ano *" aria-label="Ano"
+									aria-describedby="basic-addon1">
+							</div>
+
 						</div>
 
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-5">
+							<div class="input-group col-xl-10">
 								<div style="color: red"
 									th:if="${#fields.hasErrors('areaConcentracao')}"
 									th:errors="*{areaConcentracao}"></div>
 							</div>
 						</div>
 
-<!-- 						<div class="form-group row justify-content-center"> -->
-<!-- 							<div class="input-group col-xl-5"> -->
-<!-- 								<input type="number" name="ano" id="ano" class="form-control" -->
-<!-- 									th:field="*{ano}" placeholder="Ano *" aria-label="Ano" -->
-<!-- 									aria-describedby="basic-addon1"> -->
-<!-- 							</div> -->
-<!-- 						</div> -->
+						<!-- 						<div class="form-group row justify-content-center"> -->
+						<!-- 							<div class="input-group col-xl-5"> -->
+						<!-- 								<input type="number" name="ano" id="ano" class="form-control" -->
+						<!-- 									th:field="*{ano}" placeholder="Ano *" aria-label="Ano" -->
+						<!-- 									aria-describedby="basic-addon1"> -->
+						<!-- 							</div> -->
+						<!-- 						</div> -->
 
-<!-- 						<div class="form-group row justify-content-center"> -->
-<!-- 							<div class="input-group col-xl-5"> -->
-<!-- 								<div style="color: red" th:if="${#fields.hasErrors('ano')}" -->
-<!-- 									th:errors="*{ano}"></div> -->
-<!-- 							</div> -->
-<!-- 						</div> -->
+						<!-- 						<div class="form-group row justify-content-center"> -->
+						<!-- 							<div class="input-group col-xl-5"> -->
+						<!-- 								<div style="color: red" th:if="${#fields.hasErrors('ano')}" -->
+						<!-- 									th:errors="*{ano}"></div> -->
+						<!-- 							</div> -->
+						<!-- 						</div> -->
 
-<!-- 						<div class="form-group row justify-content-center"> -->
-<!-- 							<div class="input-group col-xl-5"> -->
-<!-- 								<select th:field="*{orientador}"> -->
-<!-- 									<option value="">Selecione o Orientador</option> -->
-<!-- 									<option th:each="orientador : ${professores}" th:value="${orientador.id}" -->
-<!-- 										th:text="${orientador.matricula - orientador.nome}"></option> -->
-<!-- 								</select> -->
-<!-- 							</div> -->
-<!-- 						</div> -->
-
-<!-- 						<div class="form-group row justify-content-center"> -->
-<!-- 							<div class="input-group col-xl-5"> -->
-<!-- 								<div style="color: red;" th:if="${#fields.hasErrors('orientador')}" -->
-<!-- 									th:errors="*{orientador}"></div> -->
-<!-- 							</div> -->
-<!-- 						</div> -->
-
-						<br>
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-5">
-								<label>* Esses campos são obrigatórios</label>
+							<div class="input-group col-xl-10">
+								<select th:field="*{orientador}" class="form-control">
+									<option value="">Selecione o Orientador</option>
+									<option th:each="orientador : ${professores}"
+										th:value="${orientador.idUsuario}"
+										th:text="${orientador.nome}"></option>
+								</select>
 							</div>
 						</div>
+
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<div style="color: red;"
+									th:if="${#fields.hasErrors('orientador')}"
+									th:errors="*{orientador}"></div>
+							</div>
+						</div>
+
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<select th:field="*{avaliador1}" class="form-control">
+									<option value="">Selecione o 1° Avaliador</option>
+									<option th:each="avaliador : ${professores}"
+										th:value="${avaliador.idUsuario}" th:text="${avaliador.nome}"></option>
+								</select>
+							</div>
+						</div>
+
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<div style="color: red;"
+									th:if="${#fields.hasErrors('avaliador1')}"
+									th:errors="*{avaliador1}"></div>
+							</div>
+						</div>
+
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<select th:field="*{avaliador2}" class="form-control">
+									<option value="">Selecione o 2° Avaliador</option>
+									<option th:each="avaliador : ${professores}"
+										th:value="${avaliador.idUsuario}" th:text="${avaliador.nome}"></option>
+								</select>
+							</div>
+						</div>
+
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<div style="color: red;"
+									th:if="${#fields.hasErrors('avaliador2')}"
+									th:errors="*{avaliador2}"></div>
+							</div>
+						</div>
+
+
+						<br>
 						<hr />
 						<div class="form-group row justify-content-center ">
 							<div class=" col-sm-2">
@@ -103,7 +161,7 @@
 							</div>
 							<div class="col-sm-2 text-right">
 								<button id="btn_salvar" type="submit"
-									class="btn btn-lg btn-success" >Confirmar</button>
+									class="btn btn-lg btn-success">Confirmar</button>
 							</div>
 
 						</div>
