--- a/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
@@ -25,22 +25,22 @@
 							</div>
 						</div>
 
-<!-- 						<div class="form-group row justify-content-center"> -->
-<!-- 							<div class="input-group col-xl-10"> -->
-<!-- 								<div class="alert  alert-danger  alert-dismissible form-control" -->
-<!-- 									role="alert" th:if="${#fields.hasAnyErrors()}"> -->
-<!-- 									<button type="button" class="close" data-dismiss="alert" -->
-<!-- 										aria-label="Close"> -->
-<!-- 										<span aria-hidden="true">&times;</span> -->
-<!-- 									</button> -->
+						<!-- 						<div class="form-group row justify-content-center"> -->
+						<!-- 							<div class="input-group col-xl-10"> -->
+						<!-- 								<div class="alert  alert-danger  alert-dismissible form-control" -->
+						<!-- 									role="alert" th:if="${#fields.hasAnyErrors()}"> -->
+						<!-- 									<button type="button" class="close" data-dismiss="alert" -->
+						<!-- 										aria-label="Close"> -->
+						<!-- 										<span aria-hidden="true">&times;</span> -->
+						<!-- 									</button> -->
 
-<!-- 									<div th:each="erro: ${#fields.detailedErrors()}"> -->
-<!-- 										<i class="fa fa-exclamation-circle"></i> <span -->
-<!-- 											th:text="${erro.message}">Mensagem erro.</span> -->
-<!-- 									</div> -->
-<!-- 								</div> -->
-<!-- 							</div> -->
-<!-- 						</div> -->
+						<!-- 									<div th:each="erro: ${#fields.detailedErrors()}"> -->
+						<!-- 										<i class="fa fa-exclamation-circle"></i> <span -->
+						<!-- 											th:text="${erro.message}">Mensagem erro.</span> -->
+						<!-- 									</div> -->
+						<!-- 								</div> -->
+						<!-- 							</div> -->
+						<!-- 						</div> -->
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
@@ -76,7 +76,7 @@
 									th:errors="*{areaConcentracao}">Deu erro aqui</div>
 							</div>
 						</div>
-						
+
 						<div class="form-group row justify-content-center">
 
 							<div class="input-group col-xl-2">
@@ -84,34 +84,36 @@
 									th:field="*{ano}" placeholder="Ano *" aria-label="Ano"
 									aria-describedby="basic-addon1">
 							</div>
-							
-							<div class="input-group col-xl-8">
-							</div>
+
+							<div class="input-group col-xl-8"></div>
 
 						</div>
-						
+
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('ano')}"
+								<div style="color: red" th:if="${#fields.hasErrors('ano')}"
 									th:errors="*{ano}">Deu erro aqui</div>
 							</div>
 						</div>
 
-						<!-- 						<div class="form-group row justify-content-center"> -->
-						<!-- 							<div class="input-group col-xl-5"> -->
-						<!-- 								<input type="number" name="ano" id="ano" class="form-control" -->
-						<!-- 									th:field="*{ano}" placeholder="Ano *" aria-label="Ano" -->
-						<!-- 									aria-describedby="basic-addon1"> -->
-						<!-- 							</div> -->
-						<!-- 						</div> -->
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<select th:field="*{aluno}" class="form-control">
+									<option value="">Selecione o Aluno</option>
+									<option th:each="aluno : ${alunos}"
+										th:value="${aluno.idUsuario}"
+										th:text="${aluno.nome}"></option>
+								</select>
+							</div>
+						</div>
 
-						<!-- 						<div class="form-group row justify-content-center"> -->
-						<!-- 							<div class="input-group col-xl-5"> -->
-						<!-- 								<div style="color: red" th:if="${#fields.hasErrors('ano')}" -->
-						<!-- 									th:errors="*{ano}"></div> -->
-						<!-- 							</div> -->
-						<!-- 						</div> -->
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<div style="color: red;"
+									th:if="${#fields.hasErrors('aluno')}"
+									th:errors="*{aluno}"></div>
+							</div>
+						</div>
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
