--- a/src/main/resources/templates/aluno/alunoCreate.html
+++ b/src/main/resources/templates/aluno/alunoCreate.html
@@ -33,6 +33,13 @@
 				            <div class="field-placeholder"><span>RA*</span></div>
 				        </div>
 				    </div>
+				    <div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('ra')}"
+									th:errors="*{ra}"></div>
+							</div>
+						</div>
                     <div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="text" name="nome"
@@ -41,6 +48,13 @@
 				            <div class="field-placeholder"><span>Nome Completo*</span></div>
 						</div>
 					</div>
+					<div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('nome')}"
+									th:errors="*{nome}"></div>
+							</div>
+				     </div>
 					 <div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="email" name="email"
@@ -49,6 +63,13 @@
 						  <div class="field-placeholder"><span>Email*</span></div>
 						</div>
 					</div>
+					<div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('email')}"
+									th:errors="*{email}"></div>
+							</div>
+				     </div>
 					<div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="text" name="nome_usuario"
@@ -57,16 +78,21 @@
 						  <div class="field-placeholder"><span>Nome de Usuário*</span></div>
 						</div>
 					</div>
-
+					<div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('nomeUsuario')}"
+									th:errors="*{nomeUsuario}"></div>
+							</div>
+				     </div>
 					<div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="text" name="telefone"
 	                                   id="telefone" class="form-control"
 	                                   th:field="*{telefone}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Telefone*</span></div>
+						  <div class="field-placeholder"><span>Telefone</span></div>
 						</div>
 					</div>
-					
 					<div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="password" name="senha"
@@ -75,7 +101,13 @@
 						  <div class="field-placeholder"><span>Senha*</span></div>
 						</div>
 					</div>
-                    
+                    <div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('senha')}"
+									th:errors="*{senha}"></div>
+							</div>
+				     </div>
                     <hr/>
                     <div class="form-group row justify-content-center ">
                         <div class=" col-sm-2">
