--- a/src/main/resources/templates/atividade/cronograma.html
+++ b/src/main/resources/templates/atividade/cronograma.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css"
         rel="stylesheet">
-        
+    <script src="../../static/js/jquery_mask/jquery.mask.js"></script>   
+    <script src="../../static/js/jquery_mask/jquery.mask.min.js"></script>  
 	<script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     
 </head>
@@ -78,6 +79,7 @@
 </style>
 
 <body>
+	
     <section layout:fragment="content">
     <div id="wrap" class="container">
     	<div class="calendario container">
@@ -90,24 +92,25 @@
 						<th class="">Fase</th>
 						<th class="">Atividade</th>
 						<th class="">Tamanho</th>
+						<th class="">Data de Início</th>
 						<th class="">Data de Entrega</th>
 					</tr>
 				</thead>
 			
 				<tbody>
-				
 					<tr th:if="${not #lists.isEmpty(atividades)}" th:each="atividade : ${atividades}">
 						<td th:text="${atividade.fase}"></td>
 						<td th:text="${atividade.descricao}"></td>
 						<td th:text="${atividade.tamanho}"></td>
-						<td th:text="${atividade.dataFinalEntrega}"></td>
+						<td th:text="${#temporals.format(atividade.dataInicioEntrega, 'dd/MM/yyyy')}"></td>
+						<td th:text="${#temporals.format(atividade.dataFinalEntrega, 'dd/MM/yyyy')}"></td>
 					</tr>
 			
 				</tbody>
 				<tfoot>	</tfoot>
 			</table>
 
-            </div>
+           </div>
        </div>
 </section>
 </body>
