--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -21,6 +21,14 @@ html, body{
 	display: flex;
 	width: 100%;
 }
+.header-login{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#btn_entrar{
+	width: 100%;
+}
 .navbar{
 	width: 100%;
 }
