--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,15 +10,15 @@
 <section layout:fragment="content">
     <div id="wrap" class="container">
         <div id="main">
-            <div class="jumbotron ">
+            <div class="jumbotron jumbotron-login">
                 <form th:object="${usuario}" th:action="@{/gtcc/login}" method="POST"
                       class="form-default form-horizontal" >
                     <div class="row">
                         <div class=" col-md-3 col-lg-3 col-xl-3">
 
                         </div>
-                        <div class="col-12 col-sm-11 col-md-6 col-lg-6 col-xl-6">
-                            <h1>Bem-vindo!</h1>
+                        <div class="header-login col-12 col-sm-11 col-md-6 col-lg-6 col-xl-6">
+                            <h1>GTCC</h1>
                             <p class="lead">Faça seu login para continuar</p>
                             <!-- MESSAGES  -->
                             <hr>
@@ -35,7 +35,6 @@
                             };
                             /*]]>*/
                         </script>
-                        <!-- 					<div class="alert alert-danger">Usuário e/ou inválidos!</div> -->
                     </div>
 
                     <div th:if="${param.logout}">
@@ -49,7 +48,6 @@
                             };
                             /*]]>*/
                         </script>
-                        <!-- 					<div class="alert alert-info">Até logo!</div> -->
                     </div>
                     <div class="row">
                         <div class=" col-md-3 col-lg-3 col-xl-3"></div>
@@ -84,7 +82,11 @@
                     <div class="row" style="padding-top: 1rem">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  offset-md-3 offset-lg-3 offset-xl-3">
                             <button id="btn_entrar" type="submit"  class="btn btn-success"><i class="fa fa-sign-in"></i> Entrar</button>
-                            <a class="btn btn-link" th:href="@{/gtcc/login/recuperarSenha}">Esqueceu a senha?</a>
+                        </div>
+                    </div>
+                    <div class="row" style="padding-top: 1rem">
+                    	<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  offset-md-3 offset-lg-3 offset-xl-3">
+                    		<a class="btn btn-link" th:href="@{/gtcc/login/recuperarSenha}">Esqueceu a senha?</a>
                             <a class="btn btn-link" th:href="@{/gtcc/usuarios/cadastrar}">Cadastre-se</a>
                         </div>
                     </div>
