--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -19,6 +19,7 @@
 
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
+			(function () {
 				var just_stop;
 
 				$('#datepicker').datepicker();
@@ -48,7 +49,7 @@
 
 				$('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
 
-			}.call(this);
+			}).call(this);
 		}, false);
 	</script>
 
@@ -57,22 +58,15 @@
 <!-- Nao encontrei o arquivo .css, dai tem que atualizar com este que esta aqui -->
 <style>
 	.defesa h3 {
-		text-align: center !important;
-		font-size: 2em !important;
-		margin: 1em auto 1em !important;
+		text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;
 	}
 
 	.defesas-detalhe {
-		background-color: #e5e5e5 !important;
-		padding: 2em 3em !important;
-		border-radius: 5px !important;
-		width: 100% !important;
+		background-color: #e5e5e5 !important;padding: 2em 3em !important;border-radius: 5px !important;width: 100% !important;
 	}
 
 	.defesas-detalhe table {
-		display: flex !important;
-		align-items: center !important;
-		width: 100% !important;
+		display: flex !important;align-items: center !important;width: 100% !important;
 	}
 
 	.defesas-detalhe thead {
@@ -300,7 +294,7 @@
 	<section layout:fragment="content">
 		<div id="wrap" class="container">
 			<div class="defesa container">
-				<h3>Agendamento de defesas</h3>
+				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;"Agendamento de defesas</h3>
 				<div class="row">
 					<div class="col-lg-3" style="width: 100%;">
 
@@ -329,9 +323,9 @@
 							<button>Gerar</button>
 						</div>
 					</div>
-					<div class="col-lg-9 defesas-detalhe">
+					<div class="col-lg-9 defesas-detalhe" style="background-color: #e5e5e5 !important;padding: 2em 3em !important;border-radius: 5px !important;width: 100% !important;">
 						<h5>Próximas defesas</h5>
-						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click">
+						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;">
 
 							<thead>
 								<tr>
