--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -290,17 +290,16 @@
 <body>
 	<section layout:fragment="content">
 		<div id="wrap" class="container">
-			<div class="defesa container">
-				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;">Agendamento de defesas</h3>
+			<div class="defesa container" style="width: 100% !important;background-color:#e5e5e5;box-sizing:border-box !important; padding: 2em; 	">
+				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;box-sizing:border-box !important;">Agendamento de defesas</h3>
 				<div class="row">
 					<div class="col-lg-3" style="width: 100%;">
 
 						<div class="calendar">
-							<h5>Calendário</h5>
 							<div id="datepicker"></div>
 							<div class="container" id="main"></div>
 						</div>
-						<div class="pdf" style='background-color: #e5e5e5; padding: 1em;'>
+						<div class="pdf" style='background-color: #eceff5; padding: 1em;'>
 							<h5>Gerar PDF</h5>
 							<form action="">
 								<input type="radio" name="edital" value="edital">
@@ -318,25 +317,25 @@
 							<button>Gerar</button>
 						</div>
 					</div>
-					<div class="col-lg-9 defesas-detalhe" style="background-color: #e5e5e5 !important;padding: 2em 3em !important;border-radius: 5px !important;width: 100% !important;">
+					<div class="col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
 						<h5>Próximas defesas</h5>
-						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;">
+						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;flex-direction:column;">
 
-							<thead style="width: 100% !important;background-color: #fff !important;border-radius: 5px !important;padding: 1em !important;">
-								<tr>
-									<th style="padding-left: 0.25em !important;" class="">Data</th>
-									<th style="padding-left: 0.25em !important;" class="">Orientando</th>
-									<th style="padding-left: 0.25em !important;" class="">Horário</th>
-									<th style="padding-left: 0.25em !important;" class="">Local</th>
-									<th style="padding-left: 0.25em !important;" class="">Ações</th>
+							<thead style="width: 100% !important; display:flex; justify-content: space-between; background-color: #fff !important; border:none; border-radius: 5px !important;padding: 1em !important;">
+								<tr style="width: 100% !important; display:flex; justify-content: space-between;">
+									<th style="padding-left: 0.25em !important;border:none;" class="">Data</th>
+									<th style="padding-left: 0.25em !important;border:none;" class="">Orientando</th>
+									<th style="padding-left: 0.25em !important;border:none;" class="">Horário</th>
+									<th style="padding-left: 0.25em !important;border:none;" class="">Local</th>
+									<th style="padding-left: 0.25em !important;border:none;" class="">Ações</th>
 								</tr>
 							</thead>
 
 							<tbody>
 								<tr th:if="${not #lists.isEmpty(agendamentos)}" th:each="agendamento : ${agendamentos}">
-									<td th:text="${agendamento.dataDefesa}"></td>
+									<td th:text="${#temporals.format(agendamento.dataDefesa, 'dd/MM/yyyy')}"></td>
 									<td th:text="${agendamento.fichaIdentificacao.aluno.nome}"></td>
-									<td th:text="${agendamento.horario}"></td>
+									<td style="text-align:left !important;" th:text="${agendamento.horario}"></td>
 									<td th:text="${agendamento.local}"></td>
 									<td>
 										<div class="btn-group pull-right">
@@ -351,9 +350,9 @@
 							</tbody>
 							<tfoot> </tfoot>
 						</table>
-						<div class="form-group row justify-content-end ">
+						<div class="form-group row" style="box-sizing:border-box; display:flex; justify-content: flex-end; margin-right:.01em;">
 							<div class="col-sm-2 text-right">
-								<a class="btn btn-lg btn-success"
+								<a class="btn btn-lg btn-success" style="padding: .5em 1em!important; font-size:1em!important;"
 									th:href="@{/gtcc/agendamentodefesa/cadastrar}">Adicionar</a>
 							</div>
 						</div>
